--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3021.0663853057686!2d-73.96777208481646!3d40.782554679324285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1677800467296!5m2!1sen!2sau" width="100%" height="400px" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
   </body>
 </html>
